add todas as aulas no servidor

--- a/Servidor/public/sucesso.html
+++ b/Servidor/public/sucesso.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Sucesso</title>
         <meta charset="utf-8">
-        <title>Servidor</title>
     </head>
     <body>
-        <h1>Servidor</h1>
+        <h1>Usuário cadastrado com sucesso!</h1>
     </body>
-
 </html>
